# tinkov_lang

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  exec  measure_time.cpp  out.s
EBNF/: EBNF.txt  omega_plus.txt
include/: backend.h  common.h  compiler.h  frontend.h  lang_syntax.h  middleend.h  stack.h  tree.h  tree_dump.h
src/: backend.cpp  common.cpp  compiler.cpp  stack.cpp  stdlib_tnkff.s  tree.cpp
src/backend/: backend.cpp  backend.h
src/common/: colors.h  common.cpp  common.h
src/compiler/: compiler.cpp  compiler.h
src/frontend/: frontend.cpp  frontend.h  lang_syntax.h
src/middleend/: middleend.cpp  middleend.h
src/processor/: commands.h  enums.h
src/processor/assembler/: asm.cpp  asm.h
src/processor/disassembler/: disasm.cpp  disasmed.txt
src/processor/processor/: spu.cpp  spu.h
src/processor/stacklib/: my_hash.cpp  my_hash.h
src/processor/text_processing_lib/: text_buf.cpp  text_buf.h
src/stack/: stack.cpp
src/stdlib_tnkff/: stdlib_tnkff.s
src/tree/: operations.h  tree.cpp  tree.h
src/tree/tree_dump/: tree_dump.cpp  tree_dump.h
src/tree/tree_dump/dumps/dot/: detailed_expr_1703165817.dot  detailed_expr_1703165873.dot  detailed_expr_1703166022.dot  detailed_expr_1703166188.dot  detailed_expr_1703166205.dot  expr_1703165817.dot  expr_1703165873.dot  expr_1703166022.dot  expr_1703166188.dot  expr_1703166205.dot
src/tree/tree_dump/dumps/dumps/: dump.html  dump_simplified.html
test_code/: assign_back_test.tnkff  factorial.tnkff  fibo.tnkff  first.tnkff  square.tnkff  test.tnkff
